# TIC

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: __init__.py  test_algebra_properties.py  test_llm_scenarios.py  test_performance.py
examples/ecommerce/: __init__.py  main.py
examples/ecommerce/molecole/: __init__.py  carrello.py  ordine.py  prodotto.py
examples/ecommerce/organismi/: __init__.py  shop.py
examples/ristorante/: __init__.py  main.py
examples/ristorante/molecole/: __init__.py  prenotazione.py  tavolo.py
examples/ristorante/organismi/: __init__.py  ristorante.py
pti_core/: __init__.py
pti_core/archetipi/: __init__.py  confronta.py  effetto.py  flusso.py
pti_core/biocache/: __init__.py
spec/: ALGEBRA.md  ARCHITETTURA-4-LAYER.md  CASI-USO.md  NAMING.md  TIC-COMPACT.md  TIC-MINI.md  TIC-VALIDATION.md
tests/: __init__.py  test_archetipi.py  test_biocache.py  test_propagazione.py
tic_core/: __init__.py
tic_core/archetipi/: contenitore.py  elemento.py  testo.py  valore.py
tic_core/biocache/: cache.py
tic_core/propagazione/: __init__.py  tessuto.py
